Fix some styling

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,7 +1,7 @@
 :root {
   --main-text-color: #e4d9d9;
   --main-bg-color: #121212;
-  --main-link-color: yellow;
+  --main-link-color: gold;
   --sidebar-width: 260px;
   --topbar-height: 60px;
   --body-side-margin: 0.6rem;
