--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Varela|Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Varela|Varela+Round|Inconsolata&display=swap');
